# nausica.ai

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  test_audio.flac
.github/workflows/: deploy.yml
src/: config.rs  main.rs
src/db/: mod.rs  sqlite.rs
src/models/: job.rs
src/routes/: admin.rs  dashboard.rs  download.rs  flac.rs  mod.rs  status.rs  upload.rs  wallet.rs
src/services/: bitails.rs  bsv.rs  job.rs  mod.rs
static/css/: style.css  wallet.css
static/js/: wallet.js
templates/: admin.html  dashboard.html  download.html  flac_player.html  flac_status.html  flac_upload.html  index.html  status.html  upload.html
