[package]
name = "upfile-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["rand-std"] }
bs58 = "0.5"
hex = "0.4"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
askama = "0.12"
tower-http = { version = "0.5", features = ["fs", "cors", "limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tower = "0.4"
axum-extra = { version = "0.9", features = ["multipart"] }
mime_guess = "2"
